implemented scroll with css and minor fixes

--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Agency X</title>
 </head>
+<header>
+    <nav id="main-nav">
+        <h2 class="hidden">Main Navigation</h2>
+        <div id="menuToggle">
+            <input type="checkbox" />
+            <span class="hamburger line1"></span>
+            <span class="hamburger line2"></span>
+            <span class="hamburger line3"></span>
+      <ul id="menu">
+          <li><a id="home" class="nav-btn" href="#home-container">Home</a><object data="images/home-icon.svg" type="" class="icon"></object></li>
+          <li><a id="about" class="nav-btn" href="#about-us">About Us <object data="images/about-icon.svg" type="" class="icon"></object></a></li>
+          <li><a id="team" class="nav-btn" href="#meet-team">Our Work <object data="images/work-icon.svg" type="" class="icon"></object></a></li>
+          <li><a id="contact" class="nav-btn" href="#">Contact <object data="images/contact-icon.svg" type="" class="icon"></object></a></li>
 
+          <!-- <i class="fab fa-black-tie"></i> -->
+      </ul>
+      </div>  <!-- menuToggle end -->
+    </nav>
+</header>
 <body>
     <h1 class="hidden">Agency X One Page Portfolio</h1>
+    <div class="bodyScroll">
 <div class="wrapper"> <!-- Wrapper starts -->
     <section id="bg-img">
       <h1 class="hidden">Agency X Landing Page</h1>
         <div id="home-container">
-          <nav id="main-nav">
-              <h2 class="hidden">Main Navigation</h2>
-              <div id="menuToggle">
-                  <input type="checkbox" />
-                  <span class="hamburger line1"></span>
-                  <span class="hamburger line2"></span>
-                  <span class="hamburger line3"></span>
-            <ul id="menu">
-                <li><a id="home" class="nav-btn" href="#home-container">Home</a><object data="images/home-icon.svg" type="" class="icon"></object></li>
-                <li><a id="about" class="nav-btn" href="#about-us">About Us <object data="images/about-icon.svg" type="" class="icon"></object></a></li>
-                <li><a id="team" class="nav-btn" href="#meet-team">Our Work <object data="images/work-icon.svg" type="" class="icon"></object></a></li>
-                <li><a id="contact" class="nav-btn" href="#">Contact <object data="images/contact-icon.svg" type="" class="icon"></object></a></li>
-
-                <!-- <i class="fab fa-black-tie"></i> -->
-            </ul>
-            </div>  <!-- menuToggle end -->
-          </nav>
+          
           <nav class="social-media-nav">
             <h2 class="hidden">Social Media Navigation</h2>
             <ul>
@@ -75,7 +78,10 @@
             <small>Designer & Front-End Developer</small> 
           </div>
           <div class="job-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur numquam est magnam id non reprehenderit dolor dolore praesentium beatae dolorem, repudiandae explicabo rerum nesciunt corporis tenetur minima suscipit similique voluptatibus.</p>
+            <p>Hi, I’m Blake Hause! I am web designer and front-end developer from London, Ontario currently enrolled in the Interactive Media and Design Program at Fanshawe College. 
+              Since beginning my journey at Fanshawe I have become familiar and proficient with many design and development tools. I have a passion for creating simple and effective content 
+              using clean design patterns and attentive interactions. 
+              I also enjoy coding things from scratch; bringing my designs to life in the browser. </p>
           </div>
             <div class="dev">
               <img src="images/dev-pic_mobile.png" alt="" class="dev-pic">
@@ -84,7 +90,9 @@
                 <small>Front-End & Back-End Developer</small> 
             </div>
             <div class="dev-job-desc">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur numquam est magnam id non reprehenderit dolor dolore praesentium beatae dolorem, repudiandae explicabo rerum nesciunt corporis tenetur minima suscipit similique voluptatibus.</p>
+                <p>Hi, I’m Daniela Dantas! I am a front-end and back-end developer from Brazil currently living in London, Ontario. 
+                  I am enrolled in the Interactive Media Design Program at Fanshawe College and at present I am part of Fanshawe's Reactr Program. Since beginning my journey at Fanshawe I have become familiar and proficient with many design and development tools. 
+                  I have a passion for creating simple and effective content using clean design patterns and attentive interactions. I also enjoy coding things from scratch; bringing my designs to life in the browser. </p>
               </div>
       </section>
       <section class="lightbox b">
@@ -109,7 +117,7 @@
     
     </div> <!-- Wrapper ends -->
  
-
+  </div><!-- BodyScroll ends -->
  </body>
 
   <!-- javascript includes -->
